Fixed rendering bug that covered text

--- a/turn.css
+++ b/turn.css
@@ -1,11 +1,11 @@
 
 #turn_wrapper {
-  width: 100%;
-  height: 100%;
+  width: 80px;
+  height: 80px;
   display:block;
   position: absolute;
   top:0;
-  right:0;
+  left:0;
 }
 
 #turn_hideme {
@@ -47,6 +47,14 @@
 
 #turn_wrapper.right {
 	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 0;
+	right: 0;
+}
+
+#turn_wrapper.right #turn_object * {
+	position: absolute;
 	right: 0;
 }
 
@@ -61,6 +69,7 @@
 #turn_wrapper .ui-wrapper {
   left: 0 !important;
   top: 0 !important;
+
 }
 
 #turn_wrapper .ui-resizable-handle {
